--- a/notebooks/cmip6-zarr-jasmin.ipynb
+++ b/notebooks/cmip6-zarr-jasmin.ipynb
@@ -211,14 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subset shape: (1980, 144, 192)\n"
+      "Subset shape: (1980, 144, 192)\n",
+      "Min, max: -2.2633825210505165e-05, 0.00022682354028802365\n",
+      "Units: kg m-2 s-1\n"
      ]
     }
    ],
