--- a/notebooks/cmip6-zarr-jasmin.ipynb
+++ b/notebooks/cmip6-zarr-jasmin.ipynb
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://cmip6-zarr-o.s3.jc.rl.ac.uk:81/CMIP6.AerChemMIP.NIMS-KMA.UKESM1-0-LL/hist-piNTCF.r3i1p1f2.Amon.evspsbl.gn.v20200224.zarr\n"
+      "http://cmip6-zarr-o.s3.jc.rl.ac.uk/CMIP6.AerChemMIP.NIMS-KMA.UKESM1-0-LL/hist-piNTCF.r3i1p1f2.Amon.evspsbl.gn.v20200224.zarr\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
     "    return f\"{scheme}/{i_start}/{i_end}\"\n",
     "\n",
     "zarr_url = map_archive_path(archive_path)\n",
-    "zarr_url = \"http://cmip6-zarr-o.s3.jc.rl.ac.uk:81/CMIP6.AerChemMIP.NIMS-KMA.UKESM1-0-LL/hist-piNTCF.r3i1p1f2.Amon.evspsbl.gn.v20200224.zarr\"\n",
+    "zarr_url = \"http://cmip6-zarr-o.s3.jc.rl.ac.uk/CMIP6.AerChemMIP.NIMS-KMA.UKESM1-0-LL/hist-piNTCF.r3i1p1f2.Amon.evspsbl.gn.v20200224.zarr\"\n",
     "print(zarr_url)"
    ]
   },
