--- a/notebooks/cmip6-zarr-jasmin.ipynb
+++ b/notebooks/cmip6-zarr-jasmin.ipynb
@@ -50,6 +50,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the virtual environment\n",
+    "if not os.path.isdir(venv_dir):\n",
+    "    virtualenv.create_environment(venv_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Activate the venv\n",
     "activate_file = os.path.join(venv_dir, \"bin\", \"activate_this.py\")\n",
     "exec(open(activate_file).read(), dict(__file__=activate_file))"
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +179,12 @@
     "    return f\"{scheme}/{i_start}/{i_end}\"\n",
     "\n",
     "zarr_url = map_archive_path(archive_path)\n",
-    "zarr_url = \"http://cmip6-zarr-o.s3.jc.rl.ac.uk/CMIP6.AerChemMIP.NIMS-KMA.UKESM1-0-LL/hist-piNTCF.r3i1p1f2.Amon.evspsbl.gn.v20200224.zarr\"\n",
     "print(zarr_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +241,6 @@
     "print(f'Min, max: {float(variable.min())}, {float(variable.max())}')\n",
     "print(f'Units: {variable.units}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
