update xarray opening of zarr

--- a/notebooks/cmip6-zarr-jasmin.ipynb
+++ b/notebooks/cmip6-zarr-jasmin.ipynb
@@ -208,7 +208,7 @@
     "def cat_to_ds(cat):\n",
     "    zarr_path = cat.df['zarr_path'][0]\n",
     "    fsmap = fsspec.get_mapper(zarr_path)\n",
-    "    return xr.open_zarr(fsmap, consolidated=True, use_cftime=True)"
+    "    return xr.open_dataset(fsmap, consolidated=True, use_cftime=True, engine='zarr')"
    ]
   },
   {
